--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
   Xcode:
     strategy:
       matrix:
-        xcode_version: ['11.3', '11.4']
+        xcode_version: ['11.4']
     runs-on: macos-latest
     env:
       DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode_version }}.app
@@ -30,12 +30,12 @@ jobs:
       - uses: actions/checkout@v2
       - run: swift -version
       - run: swift package clean        
-      - run: swift test -v -enable-code-coverage
+      - run: swift test -v --enable-code-coverage
 
   Linux:
     strategy:
       matrix:
-        tag: ['5.1', '5.2']
+        tag: ['5.2']
     runs-on: ubuntu-latest
     container:
       image: swift:${{ matrix.tag }}
